Fix username alignment on tablet screen size

--- a/src/styles/PopularProfiles.module.css
+++ b/src/styles/PopularProfiles.module.css
@@ -26,6 +26,6 @@
 /* For large tablet screens sizes from 768px wide and down */
 @media screen and (max-width: 768px){
     .ProfilesContent {
-        margin-top: 9% !important;
+        margin-top: 5% !important;
     }
 }
